--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,56 @@
+[tox]
+skip_missing_interpreters = True
+envlist = {py26,py27,py33,py34,py35,pypy}-flakes
+
+[testenv:flakes]
+commands =
+    flake8
+deps =
+    flake8
+    flake8-docstrings
+    flake8-future-import
+    flake8-print
+    pep8-naming
+    hacking
+
+[testenv:py26-flakes]
+skipsdist = True
+commands = {[testenv:flakes]commands}
+deps = {[testenv:flakes]deps}
+basepython = python2.6
+
+[testenv:py27-flakes]
+skipsdist = True
+commands = {[testenv:flakes]commands}
+deps = {[testenv:flakes]deps}
+basepython = python2.7
+
+[testenv:py33-flakes]
+skipsdist = True
+commands = {[testenv:flakes]commands}
+deps = {[testenv:flakes]deps}
+basepython = python3.3
+
+[testenv:py34-flakes]
+skipsdist = True
+commands = {[testenv:flakes]commands}
+deps = {[testenv:flakes]deps}
+basepython = python3.4
+
+[testenv:py35-flakes]
+skipsdist = True
+commands = {[testenv:flakes]commands}
+deps = {[testenv:flakes]deps}
+basepython = python3.5
+
+[testenv:pypy-flakes]
+skipsdist = True
+commands = {[testenv:flakes]commands}
+deps = {[testenv:flakes]deps}
+basepython = pypy
+
 [flake8]
-ignore = D105,D211,FI10,FI12,FI13,FI15,FI51,FI52,FI54
+ignore = D105,D211,FI10,FI12,FI13,FI15,FI51,FI52,FI54,H301
 exclude = .tox,.git,./*.egg,build,
 max_line_length = 99
 putty-ignore =
