--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,21 @@
 [tox]
 skip_missing_interpreters = True
-envlist = {py26,py27,py33,py34,py35,pypy}-flakes
+envlist = {py26,py27,py33,py34,py35,pypy}-flakes,{py26,py27,py33,py34,py35,pypy}-green
+
+[testenv]
+commands =
+    green -vv --run-coverage
+    codecov
+deps =
+    green
+    codecov
+basepython =
+    py26: python2.6
+    py27: python2.7
+    py33: python3.3
+    py34: python3.4
+    py35: python3.5
+    pypy: pypy
 
 [testenv:flakes]
 commands =
