Track coverage from flake8 tasks

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,8 @@ basepython =
 
 [testenv:flakes]
 commands =
-    flake8
+    coverage run flake8
+    codecov
 deps =
     flake8
     flake8-docstrings
@@ -27,6 +28,7 @@ deps =
     flake8-print
     pep8-naming
     hacking
+    codecov
 
 [testenv:py26-flakes]
 skipsdist = True
