Use substring matching for directories

--- a/tox.ini
+++ b/tox.ini
@@ -74,5 +74,5 @@ max_line_length = 99
 putty-ignore =
    setup.py : +FI11
    flake8_putty/config.py : +FI11
-   tests/*.py : +FI11,D102
+   tests/ : +FI11,D102
    /(__str__|__unicode__)/,/__repr__/ : D105,N802
