--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,33 @@
 [tox]
 skip_missing_interpreters = True
-envlist = {py26,py27,py33,py34,py35,pypy}-flakes,{py26,py27,py33,py34,py35,pypy}-green
+envlist = py{26,27,33,34,35,py}-{flakes,green}-v{250,241,230,224,220}
 
 [testenv]
 passenv = CI TRAVIS_BUILD_ID TRAVIS TRAVIS_BRANCH TRAVIS_JOB_NUMBER TRAVIS_PULL_REQUEST TRAVIS_JOB_ID TRAVIS_REPO_SLUG TRAVIS_COMMIT
 commands =
-    green -vv --run-coverage
+    flakes: flake8 --version
+    flakes: coverage run -m flake8
+    green: green -vv --run-coverage
     codecov
 deps =
-    green
+    green: green
     codecov
+    v250: flake8>=2.5.0
+    v241: flake8==2.4.1
+    v240: flake8==2.4.0
+    v230: flake8==2.3.0
+    v224: flake8==2.2.4
+    v220: flake8==2.2.0
+    v240,v230,v224,v220: mccabe==0.2.1
+    v230,v220,v224: pyflakes==0.8.1
+    v220: pep8==1.5.7
+    v250,v241: flake8-docstrings
+    v240,v230: flake8-docstrings==0.2.1
+    v224,v220: flake8-docstrings==0.2.0
+    v250,v241: flake8-future-import
+    v250,v241: flake8-print
+    v250,v241: pep8-naming
+    v250,v241: hacking
 basepython =
     py26: python2.6
     py27: python2.7
@@ -17,55 +35,6 @@ basepython =
     py34: python3.4
     py35: python3.5
     pypy: pypy
-
-[testenv:flakes]
-commands =
-    coverage run -m flake8
-    codecov
-deps =
-    flake8
-    flake8-docstrings
-    flake8-future-import
-    flake8-print
-    pep8-naming
-    hacking
-    codecov
-
-[testenv:py26-flakes]
-skipsdist = True
-commands = {[testenv:flakes]commands}
-deps = {[testenv:flakes]deps}
-basepython = python2.6
-
-[testenv:py27-flakes]
-skipsdist = True
-commands = {[testenv:flakes]commands}
-deps = {[testenv:flakes]deps}
-basepython = python2.7
-
-[testenv:py33-flakes]
-skipsdist = True
-commands = {[testenv:flakes]commands}
-deps = {[testenv:flakes]deps}
-basepython = python3.3
-
-[testenv:py34-flakes]
-skipsdist = True
-commands = {[testenv:flakes]commands}
-deps = {[testenv:flakes]deps}
-basepython = python3.4
-
-[testenv:py35-flakes]
-skipsdist = True
-commands = {[testenv:flakes]commands}
-deps = {[testenv:flakes]deps}
-basepython = python3.5
-
-[testenv:pypy-flakes]
-skipsdist = True
-commands = {[testenv:flakes]commands}
-deps = {[testenv:flakes]deps}
-basepython = pypy
 
 [flake8]
 ignore = D105,D211,FI10,FI12,FI13,FI15,FI51,FI52,FI54,H301
