--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,12 @@ python:
 
 env:
   matrix:
-    - TOX_SUFFIX="flakes"
+    - TOX_SUFFIX="flakes-v250"
+    - TOX_SUFFIX="flakes-v241"
+    - TOX_SUFFIX="flakes-v240"
+    - TOX_SUFFIX="flakes-v230"
+    - TOX_SUFFIX="flakes-v224"
+    - TOX_SUFFIX="flakes-v220"
     - TOX_SUFFIX="green"
 
 matrix:
