--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,15 @@
 [tox]
 skip_missing_interpreters = True
-envlist = py{26,27,33,34,35,py}-{flakes,green}-v{250,241,230,224,220}
+envlist = flakes-v{250,241,230,224,220},green
+
+[tox:travis]
+py26 = flakes
+py27 = flakes,green
+py33 = flakes,green
+py34 = flakes,green
+py35 = flakes,green
+pypy = flakes,green
+pypy3 = flakes,green
 
 [testenv]
 passenv = CI TRAVIS_BUILD_ID TRAVIS TRAVIS_BRANCH TRAVIS_JOB_NUMBER TRAVIS_PULL_REQUEST TRAVIS_JOB_ID TRAVIS_REPO_SLUG TRAVIS_COMMIT
@@ -28,13 +37,6 @@ deps =
     v250,v241: flake8-print
     v250,v241: pep8-naming
     v250,v241: hacking
-basepython =
-    py26: python2.6
-    py27: python2.7
-    py33: python3.3
-    py34: python3.4
-    py35: python3.5
-    pypy: pypy
 
 [flake8]
 ignore = D105,D211,FI10,FI12,FI13,FI15,FI51,FI52,FI54,H301
