--- a/.travis.yml
+++ b/.travis.yml
@@ -25,10 +25,8 @@ matrix:
       python: 2.6
 
 install:
-- pip install tox
+- pip install tox-travis
 - python setup.py install
 
 script:
-- v=$TRAVIS_PYTHON_VERSION
-- if [[ ${v%py} != $v ]]; then TOXPY=$v; else TOXPY=py"${v/./}"; fi
-- tox -e "${TOXPY}-${TOX_SUFFIX}"
+- tox -e $TOX_SUFFIX
