Add integration tests
Coverage of the extension elements was previously provided by
running flake8 on the flake8-putty codebase.

These new integration tests provide the same coverage by invoking
flake8.engine.get_style_guide().check_files() using stdin,
with a loss of 1.5% coverage.

--- a/tox.ini
+++ b/tox.ini
@@ -6,12 +6,13 @@ envlist = flakes-v{250,241,230,224,220},green
 passenv = CI TRAVIS_BUILD_ID TRAVIS TRAVIS_BRANCH TRAVIS_JOB_NUMBER TRAVIS_PULL_REQUEST TRAVIS_JOB_ID TRAVIS_REPO_SLUG TRAVIS_COMMIT
 commands =
     flakes: flake8 --version
-    flakes: coverage run -m flake8
+    flakes: flake8
     green: green -vv --run-coverage
-    codecov
+    green: codecov
 deps =
     green: green
-    codecov
+    green: mock ; python_version < '3.3'
+    green: codecov
     v250: flake8>=2.5.0
     v241: flake8==2.4.1
     v240: flake8==2.4.0
