--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,23 @@
 [tox]
 skip_missing_interpreters = True
-envlist = flakes-v{250,241,230,224,220},green
+envlist = flakes-v{250,241,230,224,220},green,pytest,test
 
 [testenv]
 passenv = CI TRAVIS_BUILD_ID TRAVIS TRAVIS_BRANCH TRAVIS_JOB_NUMBER TRAVIS_PULL_REQUEST TRAVIS_JOB_ID TRAVIS_REPO_SLUG TRAVIS_COMMIT
 commands =
     flakes: flake8 --version
     flakes: flake8
-    green: green -vv --run-coverage
-    green: codecov
+    green: green -vv
+    pytest: python setup.py install
+    pytest: python setup.py pytest --addopts "--cov=flake8_putty"
+    pytest: codecov
+    test: python setup.py test
 deps =
+    test,green,pytest: mock ; python_version < '3.3'
     green: green
-    green: mock ; python_version < '3.3'
-    green: codecov
+    pytest: pytest-runner
+    pytest: pytest-cov
+    pytest: codecov
     v250: flake8>=2.5.0
     v241: flake8==2.4.1
     v240: flake8==2.4.0
@@ -36,6 +41,7 @@ exclude = .tox,.git,./*.egg,build,
 max_line_length = 99
 putty-ignore =
    setup.py : +FI11
+   setup.py , /TestCommand/ : +N812
    flake8_putty/config.py : +FI11
    tests/ : +FI11,D102
    /(__str__|__unicode__)/,/__repr__/ : D105,N802
