--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,6 @@ python:
 - pypy3
 
 env:
-  global:
-    - PIP_DOWNLOAD_CACHE=$HOME/.cache/pip
   matrix:
     - TOX_SUFFIX="flakes-v250"
     - TOX_SUFFIX="flakes-v241"
@@ -31,6 +29,7 @@ before_install:
 - pip install tox-travis
 
 script:
+- env
 - tox -e $TOX_SUFFIX
 
 
