--- a/tox.ini
+++ b/tox.ini
@@ -31,17 +31,25 @@ deps =
     v240,v230: flake8-docstrings==0.2.1
     v224,v220: flake8-docstrings==0.2.0
     v250,v241: flake8-future-import
+    v250,v241: flake8-string-format
+    v250,v241: flake8-debugger
     v250,v241: flake8-print
     v250,v241: pep8-naming
+    v250,v241: flake8-pep3101
     v250,v241: hacking
+    v250,v241: flake8-coding
+    v250,v241: flake8-tuple
+    v250,v241: flake8-mock
+    v250,v241: ebb-lint ; python_version > '2.6'
 
 [flake8]
-ignore = D105,D211,FI10,FI12,FI13,FI15,FI51,FI52,FI54,H301
+ignore = D105,D211,FI10,FI12,FI13,FI15,FI51,FI52,FI54,H301,H404,H405,L101
 exclude = .tox,.git,./*.egg,build,
 max_line_length = 99
 putty-ignore =
    setup.py : +FI11
    setup.py , /TestCommand/ : +N812
    flake8_putty/config.py : +FI11
-   tests/ : +FI11,D102
-   /(__str__|__unicode__)/,/__repr__/ : D105,N802
+   flake8_putty/config.py , /return / : +S001
+   /(__str__|__unicode__)/,/__repr__/ : +D105,N802
+   tests/ : +D102,FI11,L103
