--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ skip_missing_interpreters = True
 envlist = flakes-v{250,241,230,224,220},green,pytest,test
 
 [testenv]
-passenv = CI TRAVIS_BUILD_ID TRAVIS TRAVIS_BRANCH TRAVIS_JOB_NUMBER TRAVIS_PULL_REQUEST TRAVIS_JOB_ID TRAVIS_REPO_SLUG TRAVIS_COMMIT
+passenv = CI TRAVIS_BUILD_ID TRAVIS TRAVIS_BRANCH TRAVIS_JOB_NUMBER TRAVIS_PULL_REQUEST TRAVIS_JOB_ID TRAVIS_REPO_SLUG TRAVIS_COMMIT PIP_DOWNLOAD_CACHE
 commands =
     flakes: flake8 --version
     flakes: flake8
