tox -vv for run times

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ matrix:
 script:
 - pip install tox
 - if [[ "$TRAVIS_PYTHON_VERSION" == "3.2" ]]; then pip install 'virtualenv<14' ; fi
-- tox
+# tox -vv gives run times for each action
+- tox -vv
 
 cache: pip
