Enable more flake8 extensions
Dogfood auto-ignore in setup.py.
Use patched flake8-future on Python 2.6.

--- a/tox.ini
+++ b/tox.ini
@@ -34,22 +34,32 @@ deps =
     v250,v241: flake8-string-format
     v250,v241: flake8-debugger
     v250,v241: flake8-print
+    v250,v241: flake8-todo
     v250,v241: pep8-naming
     v250,v241: flake8-pep3101
     v250,v241: hacking
     v250,v241: flake8-coding
     v250,v241: flake8-tuple
     v250,v241: flake8-mock
+    v250,v241: flake8-dodgy
+    v250,v241: flake8-tidy-imports
+    v250,v241: flake8-import-order  # hacking has a similar rule
+    v250,v241: flake8-exact-pin
     v250,v241: ebb-lint ; python_version > '2.6'
+    v240,v230: flake8-blind-except  # hacking has a similar rule
+    v240,v230: flake8-isort  # similar to flake8-import-order
+    v240,v230: flake8-future ; python_version > '2.6'  # similar to flake8-future-import
+    v240,v230: git+https://github.com/jayvdb/flake8-future@py26 ; python_version < '2.7'
 
 [flake8]
 ignore = D105,D211,FI10,FI12,FI13,FI15,FI51,FI52,FI54,H301,H404,H405,L101
 exclude = .tox,.git,./*.egg,build,
 max_line_length = 99
+future-imports = absolute_import, unicode_literals
+putty-auto-ignore = true
 putty-ignore =
    setup.py : +FI11
-   setup.py , /TestCommand/ : +N812
    flake8_putty/config.py : +FI11
    flake8_putty/config.py , /return / : +S001
    /(__str__|__unicode__)/,/__repr__/ : +D105,N802
-   tests/ : +D102,FI11,L103
+   tests/ : +D102,F481,FI11,L103
