Enable flake8-strict

--- a/tox.ini
+++ b/tox.ini
@@ -6,12 +6,12 @@ envlist = flakes-v{250,241,230,224,220},green,pytest,test
 passenv = CI TRAVIS_BUILD_ID TRAVIS TRAVIS_BRANCH TRAVIS_JOB_NUMBER TRAVIS_PULL_REQUEST TRAVIS_JOB_ID TRAVIS_REPO_SLUG TRAVIS_COMMIT
 commands =
     flakes: flake8 --version
-    flakes: flake8
-    green: green -vv
+    flakes: flake8  {posargs}
+    green: green -vv {posargs}
     pytest: python setup.py install
-    pytest: python setup.py pytest --addopts "--cov=flake8_putty"
+    pytest: python setup.py pytest --addopts "--cov=flake8_putty" {posargs}
     pytest: codecov
-    test: python setup.py test
+    test: python setup.py test {posargs}
 deps =
     test,green,pytest: mock ; python_version < '3.3'
     green: green
@@ -46,6 +46,7 @@ deps =
     v250,v241: flake8-import-order  # hacking has a similar rule
     v250,v241: flake8-exact-pin
     v250,v241: ebb-lint ; python_version > '2.6'
+    v250,v241: flake8-strict
     v240,v230: flake8-blind-except  # hacking has a similar rule
     v240,v230: flake8-isort  # similar to flake8-import-order
     v240,v230: flake8-future ; python_version > '2.6'  # similar to flake8-future-import
@@ -58,8 +59,11 @@ max_line_length = 99
 future-imports = absolute_import, unicode_literals
 putty-auto-ignore = true
 putty-ignore =
-   setup.py : +FI11
-   flake8_putty/config.py : +FI11
-   flake8_putty/config.py , /return / : +S001
-   /(__str__|__unicode__)/,/__repr__/ : +D105,N802
-   tests/ : +D102,F481,FI11,L103
+    /def [a-zA-Z0-9_]+\(/ : +S100
+    /(any|all)\(/ : +S100
+    /\):$/ : +S101
+    setup.py : +FI11
+    flake8_putty/config.py : +FI11
+    flake8_putty/config.py , /return / : +S001
+    /(__str__|__unicode__)/,/__repr__/ : +D105,N802
+    tests/ : +D102,F481,FI11,L103
