--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,13 @@ skip_missing_interpreters = True
 envlist = flakes-v{250,241,230,224,220},green,pytest,test
 
 [testenv]
-passenv = CI TRAVIS_BUILD_ID TRAVIS TRAVIS_BRANCH TRAVIS_JOB_NUMBER TRAVIS_PULL_REQUEST TRAVIS_JOB_ID TRAVIS_REPO_SLUG TRAVIS_COMMIT
+passenv =
+    CI
+    TRAVIS TRAVIS_BUILD_ID TRAVIS_BRANCH TRAVIS_JOB_NUMBER TRAVIS_PULL_REQUEST
+    TRAVIS_JOB_ID TRAVIS_REPO_SLUG TRAVIS_COMMIT
+    APPVEYOR APPVEYOR_ACCOUNT_NAME APPVEYOR_PROJECT_SLUG APPVEYOR_REPO_NAME
+    APPVEYOR_REPO_COMMIT APPVEYOR_REPO_BRANCH APPVEYOR_BUILD_VERSION
+    APPVEYOR_JOB_ID APPVEYOR_PULL_REQUEST_NUMBER
 commands =
     flakes: flake8 --version
     flakes: flake8  {posargs}
@@ -40,7 +46,8 @@ deps =
     v250,v241: hacking
     v250,v241: flake8-coding
     v250,v241: flake8-tuple
-    v250,v241: flake8-mock
+    # https://github.com/aleGpereira/flake8-mock/issues/3
+    v250,v241: flake8-mock ; sys_platform != 'win32' or python_version < '3'
     v250,v241: flake8-dodgy
     v250,v241: flake8-tidy-imports
     v250,v241: flake8-import-order  # hacking has a similar rule
@@ -50,7 +57,9 @@ deps =
     # The following are run in a different toxenv,
     # as they are similar to one of the above plugins
     v230,v224: flake8-blind-except  # hacking has a similar rule
-    v230,v224: flake8-isort  # similar to flake8-import-order
+    # isort uses customised rules in setup.cfg to behave like flake8-import-order
+    # https://github.com/timothycrosley/isort/issues/419
+    v230,v224: flake8-isort ; sys_platform != 'win32'
     v230,v224: flake8-future ; python_version > '2.6'  # similar to flake8-future-import
     v230,v224: git+https://github.com/jayvdb/flake8-future@py26 ; python_version < '2.7'
 
