--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,7 @@
 [isort]
+known_standard_library=_ast,tokenize
+known_third_party=pep8
 indent='    '
 multi_line_output=3
 include_trailing_comma=true
-skip=tests/test_integration.py
+skip=tests/test_integration.py,flake8_putty/extension.py
