Use real filename for integration test
Works around bug in flake8_tuple.
Also move invalid 'flakes-v240' dependencies to v224

--- a/tox.ini
+++ b/tox.ini
@@ -47,15 +47,18 @@ deps =
     v250,v241: flake8-exact-pin
     v250,v241: ebb-lint ; python_version > '2.6'
     v250,v241: flake8-strict
-    v240,v230: flake8-blind-except  # hacking has a similar rule
-    v240,v230: flake8-isort  # similar to flake8-import-order
-    v240,v230: flake8-future ; python_version > '2.6'  # similar to flake8-future-import
-    v240,v230: git+https://github.com/jayvdb/flake8-future@py26 ; python_version < '2.7'
+    # The following are run in a different toxenv,
+    # as they are similar to one of the above plugins
+    v230,v224: flake8-blind-except  # hacking has a similar rule
+    v230,v224: flake8-isort  # similar to flake8-import-order
+    v230,v224: flake8-future ; python_version > '2.6'  # similar to flake8-future-import
+    v230,v224: git+https://github.com/jayvdb/flake8-future@py26 ; python_version < '2.7'
 
 [flake8]
 ignore = D105,D211,FI10,FI12,FI13,FI15,FI51,FI52,FI54,H301,H404,H405,L101
 exclude = .tox,.git,./*.egg,build,
 max_line_length = 99
+require-code = true
 future-imports = absolute_import, unicode_literals
 putty-auto-ignore = true
 putty-ignore =
