auto ignore on multiple lines

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [isort]
-known_standard_library=_ast,tokenize
+known_standard_library=tokenize
 known_third_party=pep8
 indent='    '
 multi_line_output=3
