--- a/tox.ini
+++ b/tox.ini
@@ -70,4 +70,4 @@ putty-ignore =
     flake8_putty/config.py , /return / : +S001
     /(__str__|__unicode__)/,/__repr__/ : +D105,N802
     tests/ : +D102,F481,FI11,L103
-    flake8_putty/extension.py, /(from flake8_putty.config|functools)/ : +I100
+    flake8_putty/extension.py, /(from flake8_putty.config)/ : +I100
