--- a/setup.cfg
+++ b/setup.cfg
@@ -2,4 +2,4 @@
 indent='    '
 multi_line_output=3
 include_trailing_comma=true
-skip=tests/test_integration.py
+skip=tests/test_config.py,tests/test_integration.py
