--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,7 @@ commands =
 deps =
     test,green,pytest: mock ; python_version < '3.3'
     green: green
+    green: packaging
     pytest: pytest-runner
     pytest: pytest-cov
     pytest: codecov
