--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 skip_missing_interpreters = True
-envlist = flakes-v{250,241,230,224,220},green,pytest,test
+envlist = flakes-v{25x,250,241,230,224,220,210,200},green,pytest,test
 
 [testenv]
 passenv =
@@ -11,8 +11,8 @@ passenv =
     APPVEYOR_REPO_COMMIT APPVEYOR_REPO_BRANCH APPVEYOR_BUILD_VERSION
     APPVEYOR_JOB_ID APPVEYOR_PULL_REQUEST_NUMBER
 commands =
-    flakes: flake8 --version
-    flakes: flake8  {posargs}
+    flakes,v25x,v250,v241,v240,v230,v224,v220,v210,v200: flake8 --version
+    flakes,v25x,v250,v241,v240,v230,v224,v220,v210,v200: flake8 {posargs}
     green: green -vv {posargs}
     pytest: python setup.py install
     pytest: python setup.py pytest --addopts "--cov=flake8_putty" {posargs}
@@ -24,12 +24,15 @@ deps =
     pytest: pytest-runner
     pytest: pytest-cov
     pytest: codecov
-    v250: flake8>=2.5.0
+    v25x: flake8>2.5.0
+    v250: flake8==2.5.0
     v241: flake8==2.4.1
     v240: flake8==2.4.0
     v230: flake8==2.3.0
     v224: flake8==2.2.4
     v220: flake8==2.2.0
+    v210: flake8==2.1.0
+    v200: flake8==2.0
     v240,v230,v224,v220: mccabe==0.2.1
     v230,v220,v224: pyflakes==0.8.1
     v220: pep8==1.5.7
