--- a/tox.ini
+++ b/tox.ini
@@ -44,7 +44,6 @@ deps =
     v250,v241: flake8-string-format
     v250,v241: flake8-debugger
     v250,v241: flake8-print
-    v250,v241: flake8-todo
     v250,v241: pep8-naming
     v250,v241: flake8-pep3101
     v250,v241: hacking
@@ -66,6 +65,8 @@ deps =
     v230,v224: flake8-isort ; sys_platform != 'win32'
     v230,v224: flake8-future ; python_version > '2.6'  # similar to flake8-future-import
     v230,v224: git+https://github.com/jayvdb/flake8-future@py26 ; python_version < '2.7'
+    # flake8-todo is a blunter implementation of hacking H101
+    v230,v224: flake8-todo
 
 [flake8]
 ignore = D105,D211,FI10,FI12,FI13,FI15,FI51,FI52,FI54,H301,H404,H405,L101
@@ -82,4 +83,4 @@ putty-ignore =
     flake8_putty/config.py : +FI11
     flake8_putty/config.py , /return / : +S001
     /(__str__|__unicode__)/,/__repr__/ : +D105,N802
-    tests/ : +D102,F481,FI11,L103
+    tests/ : +D102,F481,FI11,I100,L103,T000
