--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ python:
 
 env:
   matrix:
-    - TOXENV=v25x,v241,v230,v224,v210,v200
+    - TOXENV=v25x,v241,v230,v224,v220,v210,v200
     - TOXENV=green
     - TOXENV=pytest
 
