--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 skip_missing_interpreters = True
-envlist = flakes-v{25x,250,241,230,224,220,210,200},green,pytest,test
+envlist = flakes-v{25x,250,240,241,230,224,220,210,200},green,pytest,test
 
 [testenv]
 passenv =
@@ -12,7 +12,12 @@ passenv =
     APPVEYOR_JOB_ID APPVEYOR_PULL_REQUEST_NUMBER
 commands =
     flakes,v25x,v250,v241,v240,v230,v224,v220,v210,v200: flake8 --version
-    flakes,v25x,v250,v241,v240,v230,v224,v220,v210,v200: flake8 {posargs}
+    # --jobs 32 is default, and is ignored on Microsoft Windows
+    # See https://github.com/travis-ci/travis-ci/issues/4696
+    # Note v220 with --jobs fails.
+    flakes,v25x,v250,v241,v240,v230,v224,v220: flake8 --jobs 32 {posargs}
+    # --jobs was added in v2.2.0
+    v210,v200: flake8 {posargs}
     green: green -vv {posargs}
     pytest: python setup.py install
     pytest: python setup.py pytest --addopts "--cov=flake8_putty" {posargs}
@@ -40,6 +45,7 @@ deps =
     v250,v241: flake8-docstrings
     v240,v230: flake8-docstrings==0.2.1
     v224,v220: flake8-docstrings==0.2.0
+    # The following are non-core extensions
     v250,v241: flake8-future-import
     v250,v241: flake8-string-format
     v250,v241: flake8-debugger
