--- a/tox.ini
+++ b/tox.ini
@@ -14,8 +14,12 @@ commands =
     flakes,v25x,v250,v241,v240,v230,v224,v220,v210,v200: flake8 --version
     # --jobs 32 is default, and is ignored on Microsoft Windows
     # See https://github.com/travis-ci/travis-ci/issues/4696
-    # Note v220 with --jobs fails.
-    flakes,v25x,v250,v241,v240,v230,v224,v220: flake8 --jobs 32 {posargs}
+    v250,v241,v240,v230,v224: flake8 --jobs 32 {posargs}
+    # Use --jobs 1 to force single process configuration
+    flakes,v25x: flake8 --jobs 1 {posargs}
+    # use --jobs 2 to force BaseQReport to reuse a subprocess
+    # Note v220 with --jobs fails on Windows.
+    v220: flake8 --jobs 2 {posargs}
     # --jobs was added in v2.2.0
     v210,v200: flake8 {posargs}
     green: green -vv {posargs}
@@ -42,7 +46,7 @@ deps =
     v240,v230,v224,v220: mccabe==0.2.1
     v230,v220,v224: pyflakes==0.8.1
     v220: pep8==1.5.7
-    v250,v241: flake8-docstrings
+    v25x,v250,v241: flake8-docstrings
     v240,v230: flake8-docstrings==0.2.1
     v224,v220: flake8-docstrings==0.2.0
     # The following are non-core extensions
