Tests for trailing newline in physical line
The physical line being matched contains a new line character.
These tests show this can cause problems with crafted regex,
and confirm that there are not strange results in ordinary usage.

--- a/tox.ini
+++ b/tox.ini
@@ -94,3 +94,4 @@ putty-ignore =
     flake8_putty/config.py , /return / : +S001
     /(__str__|__unicode__)/,/__repr__/ : +D105,N802
     tests/ : +D102,F481,FI11,I100,L103,T000
+    tests/test_integration.py : +L102
