Use virtualenv==15.0.1 and VIRTUALENV_DOWNLOAD=no
virtualenv 15.0.2 fails when comments appear in tox deps.

Works around #16

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ python:
 - pypy3
 
 env:
+  global:
+    # Workaround for https://github.com/jayvdb/flake8-putty/issues/16
+    - VIRTUALENV_DOWNLOAD=no
   matrix:
     - TOXENV=v25x,v241,v230,v224,v220,v210,v200
     - TOXENV=green
@@ -36,7 +39,7 @@ matrix:
       python: pypy3
 
 install:
-- pip install tox
+- pip install tox virtualenv==15.0.1
 
 script:
 - if [[ "$TRAVIS_PYTHON_VERSION" == "3.2" ]]; then pip install 'virtualenv<14' ; fi
