Set flake8-future-import min-version = 2.6
flake8-future-import 0.4 added errors related to __future__
members nested_scopes and generators.

flake8-future-import 0.4 also introduced config variable min-version,
used to pre-determine which __future__ imports are needed in order
that the code running on older versions of Python use the same features
that are available on later releases.  Setting it to 2.6 means the
nested_scopes and generators features are unnecessary __future__ imports.

--- a/tox.ini
+++ b/tox.ini
@@ -83,6 +83,7 @@ ignore = D105,D211,FI10,FI12,FI13,FI15,FI51,FI52,FI54,H301,H404,H405,L101
 exclude = .tox,.git,./*.egg,build,
 max_line_length = 99
 require-code = true
+min-version = 2.6
 future-imports = absolute_import, unicode_literals
 putty-auto-ignore = true
 putty-ignore =
