Omit flake8-strict from Python 2.6 testing
flake8-strict is broken on Python 2.6

--- a/tox.ini
+++ b/tox.ini
@@ -66,7 +66,7 @@ deps =
     v250,v241: flake8-import-order  # hacking has a similar rule
     v250,v241: flake8-exact-pin
     v250,v241: ebb-lint ; python_version > '2.6'
-    v250,v241: flake8-strict
+    v250,v241: flake8-strict ; python_version > '2.6'
     # The following are run in a different toxenv,
     # as they are similar to one of the above plugins
     v230,v224: flake8-blind-except  # hacking has a similar rule
