Add support for flake8 v3
Also add job for flake8 2.6.x,
and test 2.5.5 instead of 2.5.0.

--- a/tox.ini
+++ b/tox.ini
@@ -11,12 +11,12 @@ passenv =
     APPVEYOR_REPO_COMMIT APPVEYOR_REPO_BRANCH APPVEYOR_BUILD_VERSION
     APPVEYOR_JOB_ID APPVEYOR_PULL_REQUEST_NUMBER
 commands =
-    flakes,v25x,v250,v241,v240,v230,v224,v220,v210,v200: flake8 --version
+    flakes,v3,v26x,v255,v241,v240,v230,v224,v220,v210,v200: flake8 --version
     # --jobs 32 is default, and is ignored on Microsoft Windows
     # See https://github.com/travis-ci/travis-ci/issues/4696
-    v250,v241,v240,v230,v224: flake8 --jobs 32 {posargs}
+    v3,v255,v241,v240,v230,v224: flake8 --jobs 32 {posargs}
     # Use --jobs 1 to force single process configuration
-    flakes,v25x: flake8 --jobs 1 {posargs}
+    flakes,v26x: flake8 --jobs 1 {posargs}
     # use --jobs 2 to force BaseQReport to reuse a subprocess
     # Note v220 with --jobs fails on Windows.
     v220: flake8 --jobs 2 {posargs}
@@ -31,11 +31,13 @@ deps =
     test,green,pytest: mock ; python_version < '3.3'
     green: green
     green: packaging
+    pytest: git+https://github.com/jayvdb/flake8
     pytest: pytest-runner
     pytest: pytest-cov
     pytest: codecov
-    v25x: flake8>2.5.0
-    v250: flake8==2.5.0
+    v3: flake8==3.0.0b1
+    v26x: flake8>=2.6.2,<2.7
+    v255: flake8==2.5.5
     v241: flake8==2.4.1
     v240: flake8==2.4.0
     v230: flake8==2.3.0
