Workaround other bug

--- a/tox.ini
+++ b/tox.ini
@@ -62,17 +62,17 @@ deps =
     v250,v241: flake8-mock ; sys_platform != 'win32' or python_version < '3'
     v250,v241: flake8-dodgy
     v250,v241: flake8-tidy-imports
-    v250,v241: flake8-import-order  # hacking has a similar rule
+    v250,v241: flake8-import-order
     v250,v241: flake8-exact-pin
     v250,v241: ebb-lint ; python_version > '2.6'
     v250,v241: flake8-strict ; python_version > '2.6'
     # The following are run in a different toxenv,
     # as they are similar to one of the above plugins
-    v230,v224: flake8-blind-except  # hacking has a similar rule
+    v230,v224: flake8-blind-except
     # isort uses customised rules in setup.cfg to behave like flake8-import-order
     # https://github.com/timothycrosley/isort/issues/419
     v230,v224: flake8-isort ; sys_platform != 'win32'
-    v230,v224: flake8-future ; python_version > '2.6'  # similar to flake8-future-import
+    v230,v224: flake8-future ; python_version > '2.6'
     v230,v224: git+https://github.com/jayvdb/flake8-future@py26 ; python_version < '2.7'
     # flake8-todo is a blunter implementation of hacking H101
     v230,v224: flake8-todo
