--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ matrix:
       python: pypy3
 
 install:
-  - python -m pip install -U pip
+  - pip install -r test-requirements.txt
   - pip install tox-travis
 
 script:
