tox.ini: Enable sitepackages

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ skip_missing_interpreters = True
 envlist = flakes-v{25x,250,240,241,230,224,220,210,200},green,pytest,test
 
 [testenv]
+sitepackages=True
 passenv =
     CI
     TRAVIS TRAVIS_BUILD_ID TRAVIS_BRANCH TRAVIS_JOB_NUMBER TRAVIS_PULL_REQUEST
