tox.ini: Add backport for green on Python 3.2

--- a/tox.ini
+++ b/tox.ini
@@ -33,6 +33,7 @@ deps =
     green,pytest: coverage<5 ; python_version == '2.6' or python_version == '3.3'
     green,pytest: coverage<4 ; python_version == '3.2'
     green: green
+    green: backports.shutil_get_terminal_size>=1.0.0; python_version=="3.2"
     pytest: pytest-runner
     pytest: pytest-cov
     pytest: codecov
