--- a/virtualenv.ini
+++ b/virtualenv.ini
@@ -1,2 +1,7 @@
 [virtualenv]
 system-site-packages = True
+system_site_packages = True
+no-wheel = True
+no_wheel = True
+no-download = True
+no_download = True
