--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,8 @@ deps =
     green,pytest: coverage<4 ; python_version == '3.2'
     green: green
     green: backports.shutil_get_terminal_size>=1.0.0; python_version=="3.2"
-    pytest: pytest-runner
+    pytest: pytest-runner; python_version != '2.6'
+    pytest: pytest-runner<3; python_version == '2.6'
     pytest: pytest-cov
     pytest: codecov
     v26x: flake8>=2.6.2,<2.7
@@ -49,7 +50,9 @@ deps =
     v240,v230,v224,v220: mccabe==0.2.1
     v230,v220,v224: pyflakes==0.8.1
     v220: pep8==1.5.7
-    v25x,v250,v241: flake8-docstrings
+    # pydocstyle 2.0.0 needs snowballstemmer, which doesnt support 3.2
+    v25x,v250,v241: flake8-docstrings<1.1.0 ; python_version == '3.2'
+    v25x,v250,v241: flake8-docstrings ; python_version != '3.2'
     v240,v230: flake8-docstrings==0.2.1
     v224,v220: flake8-docstrings==0.2.0
     # The following are non-core extensions
@@ -59,7 +62,8 @@ deps =
     v250,v241: flake8-print
     v250,v241: pep8-naming
     v250,v241: flake8-pep3101
-    v250,v241: hacking
+    v250,v241: hacking; python_version != '3.3'
+    v250,v241: hacking<1.1.0; python_version == '3.3'
     # v250,v241: flake8-coding
     v250,v241: flake8-tuple
     # https://github.com/aleGpereira/flake8-mock/issues/3
