--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,7 @@ deps =
     green: backports.shutil_get_terminal_size>=1.0.0; python_version=="3.2"
     # pytest: pytest-runner; python_version != '2.6'
     # pytest: pytest-runner<3; python_version == '2.6'
-    pytest: setuptools_scm; python_version == '2.6'
+    pytest: setuptools_scm<1.16; python_version == '2.6'
     pytest: pytest-runner
     pytest: pytest-cov
     pytest: codecov
@@ -63,7 +63,8 @@ deps =
     v250,v241: flake8-string-format
     v250,v241: flake8-debugger
     v250,v241: flake8-print
-    v250,v241: pep8-naming
+    v250,v241: pep8-naming<0.7; python_version == '3.2'
+    v250,v241: pep8-naming; python_version != '3.2'
     v250,v241: flake8-pep3101
     v250,v241: hacking; python_version != '3.3'
     v250,v241: hacking<1.0.0; python_version == '3.3'
