More plugin pins

--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,6 @@ deps =
     green: backports.shutil_get_terminal_size>=1.0.0; python_version=="3.2"
     # pytest: pytest-runner; python_version != '2.6'
     # pytest: pytest-runner<3; python_version == '2.6'
-    pytest: setuptools_scm<1.16; python_version == '2.6'
     pytest: pytest-runner
     pytest: pytest-cov
     pytest: codecov
@@ -59,6 +58,7 @@ deps =
     v240,v230: flake8-docstrings==0.2.1
     v224,v220: flake8-docstrings==0.2.0
     # The following are non-core extensions
+    v250,v241: setuptools_scm<1.16; python_version == '2.6'
     v250,v241: flake8-future-import
     v250,v241: flake8-string-format
     v250,v241: flake8-debugger
@@ -67,7 +67,7 @@ deps =
     v250,v241: pep8-naming; python_version != '3.2'
     v250,v241: flake8-pep3101
     v250,v241: hacking; python_version != '3.3'
-    v250,v241: hacking<1.0.0; python_version == '3.3'
+    v250,v241: hacking<0.13; python_version == '3.3'
     # v250,v241: flake8-coding
     v250,v241: flake8-tuple
     # https://github.com/aleGpereira/flake8-mock/issues/3
@@ -77,6 +77,7 @@ deps =
     # hacking has a similar rule:
     v250,v241: flake8-import-order
     v250,v241: flake8-exact-pin
+    v250,v241: ebb-lint<0.16.1.0 ; python_version == '3.2'
     v250,v241: ebb-lint ; python_version > '2.6'
     v250,v241: flake8-strict ; python_version > '2.6'
     # The following are run in a different toxenv,
