More plugin pins

--- a/tox.ini
+++ b/tox.ini
@@ -34,8 +34,8 @@ deps =
     green,pytest: coverage<4 ; python_version == '3.2'
     green: green
     green: backports.shutil_get_terminal_size>=1.0.0; python_version=="3.2"
-    # pytest: pytest-runner; python_version != '2.6'
-    # pytest: pytest-runner<3; python_version == '2.6'
+    pytest-runner; python_version != '2.6'
+    pytest-runner<3; python_version == '2.6'
     pytest: pytest-runner
     pytest: pytest-cov
     pytest: codecov
@@ -67,7 +67,7 @@ deps =
     v250,v241: pep8-naming; python_version != '3.2'
     v250,v241: flake8-pep3101
     v250,v241: hacking; python_version != '3.3'
-    v250,v241: hacking<0.13; python_version == '3.3'
+    v250,v241: hacking<0.12; python_version == '3.3'
     # v250,v241: flake8-coding
     v250,v241: flake8-tuple
     # https://github.com/aleGpereira/flake8-mock/issues/3
@@ -78,7 +78,7 @@ deps =
     v250,v241: flake8-import-order
     v250,v241: flake8-exact-pin
     v250,v241: ebb-lint<0.16.1.0 ; python_version == '3.2'
-    v250,v241: ebb-lint ; python_version > '2.6'
+    v250,v241: ebb-lint ; python_version > '2.6' and python_version != '3.2'
     v250,v241: flake8-strict ; python_version > '2.6'
     # The following are run in a different toxenv,
     # as they are similar to one of the above plugins
