--- a/tox.ini
+++ b/tox.ini
@@ -35,7 +35,7 @@ deps =
     green: green
     green: backports.shutil_get_terminal_size>=1.0.0; python_version=="3.2"
     pytest-runner; python_version != '2.6'
-    pytest-runner<3; python_version == '2.6'
+    pytest-runner<2.12; python_version == '2.6'
     pytest: pytest-runner
     pytest: pytest-cov
     pytest: codecov
@@ -47,6 +47,7 @@ deps =
     v224: flake8==2.2.4
     v220: flake8==2.2.0
     v210: flake8==2.1.0
+    v210: pyflakes<2; python_version == '3.2' or ; python_version == '3.3'
     v200: flake8==2.0
     v240,v230,v224,v220: mccabe==0.2.1
     v230,v220,v224: pyflakes==0.8.1
@@ -67,7 +68,7 @@ deps =
     v250,v241: pep8-naming; python_version != '3.2'
     v250,v241: flake8-pep3101
     v250,v241: hacking; python_version != '3.3'
-    v250,v241: hacking<0.12; python_version == '3.3'
+    v250,v241: hacking<0.11; python_version == '3.3'
     # v250,v241: flake8-coding
     v250,v241: flake8-tuple
     # https://github.com/aleGpereira/flake8-mock/issues/3
