Move pytest-runner to test-requirements.txt
This hopefully helps setuptools find it when installing flake8-debugger

--- a/tox.ini
+++ b/tox.ini
@@ -67,8 +67,8 @@ deps =
     v250,v241: pep8-naming<0.7; python_version == '3.2'
     v250,v241: pep8-naming; python_version != '3.2'
     v250,v241: flake8-pep3101
-    v250,v241: hacking; python_version != '3.3'
-    v250,v241: hacking<0.11; python_version == '3.3'
+    v250,v241: hacking; python_version != '3.3' and python_version != '3.2'
+    v250,v241: hacking<0.11; python_version == '3.3' or python_version == '3.2'
     # v250,v241: flake8-coding
     v250,v241: flake8-tuple
     # https://github.com/aleGpereira/flake8-mock/issues/3
