--- a/tox.ini
+++ b/tox.ini
@@ -47,7 +47,7 @@ deps =
     v224: flake8==2.2.4
     v220: flake8==2.2.0
     v210: flake8==2.1.0
-    v210: pyflakes<2; python_version == '3.2' or ; python_version == '3.3'
+    v210: pyflakes<2; python_version == '3.2' or python_version == '3.3'
     v200: flake8==2.0
     v240,v230,v224,v220: mccabe==0.2.1
     v230,v220,v224: pyflakes==0.8.1
@@ -62,7 +62,8 @@ deps =
     v250,v241: setuptools_scm<1.16; python_version == '2.6'
     v250,v241: flake8-future-import
     v250,v241: flake8-string-format
-    v250,v241: flake8-debugger
+    v250,v241: flake8-debugger<3; python_version == '2.6'
+    v250,v241: flake8-debugger; python_version > '2.6'
     v250,v241: flake8-print
     v250,v241: pep8-naming<0.7; python_version == '3.2'
     v250,v241: pep8-naming; python_version != '3.2'
