--- a/tox.ini
+++ b/tox.ini
@@ -67,8 +67,8 @@ deps =
     v250,v241: flake8-debugger; python_version > '2.6'
     v250,v241: flake8-print<3; python_version == '2.6'
     v250,v241: flake8-print; python_version > '2.6'
-    v250,v241: pep8-naming<0.7; python_version == '3.2'
-    v250,v241: pep8-naming; python_version != '3.2'
+    v250,v241: pep8-naming<0.7; python_version == '3.2' or python_version == '2.6'
+    v250,v241: pep8-naming; python_version != '3.2' and python_version != '2.6'
     v250,v241: flake8-pep3101
     v250,v241: hacking; python_version != '3.3' and python_version != '3.2'
     v250,v241: hacking<0.11; python_version == '3.3' or python_version == '3.2'
@@ -115,3 +115,4 @@ putty-ignore =
     /(__str__|__unicode__)/,/__repr__/ : +D105,N802
     tests/ : +D102,F481,FI11,I100,L103,T000
     tests/test_integration.py : +L102
+    /__.*__/ : +N807
