--- a/tox.ini
+++ b/tox.ini
@@ -46,9 +46,9 @@ deps =
     v230: flake8==2.3.0
     v224: flake8==2.2.4
     v220: flake8==2.2.0
-    v210: pyflakes<2; python_version == '3.2' or python_version == '3.3'
+    v210: pyflakes<2; python_version == '2.6' or python_version == '3.2' or python_version == '3.3'
     v210: flake8==2.1.0
-    v200: pyflakes<2; python_version == '3.2' or python_version == '3.3'
+    v200: pyflakes<2; python_version == '2.6' or python_version == '3.2' or python_version == '3.3'
     v200: flake8==2.0
     v240,v230,v224,v220: mccabe==0.2.1
     v230,v220,v224: pyflakes==0.8.1
@@ -70,7 +70,7 @@ deps =
     v250,v241: pep8-naming<0.7; python_version == '3.2' or python_version == '2.6'
     v250,v241: pep8-naming; python_version != '3.2' and python_version != '2.6'
     v250,v241: flake8-pep3101
-    v250,v241: hacking; python_version != '3.3' and python_version != '3.2'
+    v250,v241: hacking; python_version != '2.6' and python_version != '3.3' and python_version != '3.2'
     v250,v241: hacking<0.11; python_version == '3.3' or python_version == '3.2'
     # v250,v241: flake8-coding
     v250,v241: flake8-tuple
@@ -112,7 +112,6 @@ putty-ignore =
     setup.py : +FI11
     flake8_putty/config.py : +FI11
     flake8_putty/config.py , /return / : +S001
-    /(__str__|__unicode__)/,/__repr__/ : +D105,N802
+    /(__str__|__unicode__)/,/__repr__/ : +D105,N802,+N807
     tests/ : +D102,F481,FI11,I100,L103,T000
     tests/test_integration.py : +L102
-    /__.*__/ : +N807
