--- a/tox.ini
+++ b/tox.ini
@@ -79,7 +79,8 @@ deps =
     v250,v241: flake8-dodgy
     v250,v241: flake8-tidy-imports
     # hacking has a similar rule:
-    v250,v241: flake8-import-order
+    v250,v241: flake8-import-order<0.9; python_version == '2.6'
+    v250,v241: flake8-import-order; python_version > '2.6'
     v250,v241: flake8-exact-pin
     v250,v241: ebb-lint<0.16.1.0 ; python_version == '3.2'
     v250,v241: ebb-lint ; python_version > '2.6' and python_version != '3.2'
@@ -112,6 +113,6 @@ putty-ignore =
     setup.py : +FI11
     flake8_putty/config.py : +FI11
     flake8_putty/config.py , /return / : +S001
-    /(__str__|__unicode__)/,/__repr__/ : +D105,N802,+N807
+    /(__str__|__unicode__)/,/__repr__/ : +D105,N802,N807
     tests/ : +D102,F481,FI11,I100,L103,T000
     tests/test_integration.py : +L102
