Add pycodestyle on py26

--- a/tox.ini
+++ b/tox.ini
@@ -69,6 +69,9 @@ deps =
     v250,v241: flake8-print; python_version > '2.6'
     v250,v241: pep8-naming<0.7; python_version == '3.2' or python_version == '2.6'
     v250,v241: pep8-naming; python_version != '3.2' and python_version != '2.6'
+    # flake8-pep3101 depends on pycodestyle, which isnt a dependency on py26
+    # with all the varied rules here for py26
+    v250,v241: pycodestyle; python_version == '2.6'
     v250,v241: flake8-pep3101
     v250,v241: hacking; python_version != '2.6' and python_version != '3.3' and python_version != '3.2'
     v250,v241: hacking<0.11; python_version == '3.3' or python_version == '3.2'
