--- a/tox.ini
+++ b/tox.ini
@@ -53,8 +53,9 @@ deps =
     v240,v230,v224,v220: mccabe==0.2.1
     v230,v220,v224: pyflakes==0.8.1
     v220: pep8==1.5.7
+    # pydocstyle 2 uses syntax incompatible with Python 2.6
     # pydocstyle 2 needs snowballstemmer, which doesnt support 3.2
-    v25x,v250,v241: pydocstyle<2 ; python_version == '3.2'
+    v25x,v250,v241: pydocstyle<2 ; python_version == '2.6' or python_version == '3.2'
     v25x,v250,v241: flake8-docstrings<1.1.0 ; python_version == '3.2' or python_version == '2.6'
     v25x,v250,v241: flake8-docstrings ; python_version != '3.2' and python_version != '2.6'
     v240,v230: flake8-docstrings==0.2.1
