--- a/tox.ini
+++ b/tox.ini
@@ -75,7 +75,7 @@ deps =
     v250,v241: flake8-pep3101
     v250,v241: hacking; python_version != '2.6' and python_version != '3.3' and python_version != '3.2'
     v250,v241: hacking<0.11; python_version == '3.3' or python_version == '3.2'
-    # v250,v241: flake8-coding
+    v250,v241: flake8-coding
     v250,v241: flake8-tuple
     # https://github.com/aleGpereira/flake8-mock/issues/3
     v250,v241: flake8-mock ; sys_platform != 'win32' or python_version < '3'
@@ -94,12 +94,12 @@ deps =
     v230,v224: flake8-blind-except
     # isort uses customised rules in setup.cfg to behave like flake8-import-order
     # https://github.com/timothycrosley/isort/issues/419
-    # v230,v224: flake8-isort ; sys_platform != 'win32'
+    v230,v224: flake8-isort ; sys_platform != 'win32'
     # similar to flake8-future-import:
     v230,v224: flake8-future ; python_version > '2.6'
     v230,v224: git+https://github.com/jayvdb/flake8-future@py26 ; python_version < '2.7'
     # flake8-todo is a blunter implementation of hacking H101
-    # v230,v224: flake8-todo
+    v230,v224: flake8-todo
 
 [flake8]
 ignore = D105,D211,FI10,FI12,FI13,FI15,FI51,FI52,FI54,H301,H404,H405,L101
