--- a/tox.ini
+++ b/tox.ini
@@ -80,7 +80,8 @@ deps =
     # https://github.com/aleGpereira/flake8-mock/issues/3
     v250,v241: flake8-mock ; sys_platform != 'win32' or python_version < '3'
     v250,v241: flake8-dodgy
-    v250,v241: flake8-tidy-imports
+    v250,v241: flake8-tidy-imports<1.0.2; python_version == '2.6'
+    v250,v241: flake8-tidy-imports; python_version > '2.6'
     # hacking has a similar rule:
     v250,v241: flake8-import-order<0.9; python_version == '2.6'
     v250,v241: flake8-import-order; python_version > '2.6'
@@ -93,6 +94,7 @@ deps =
     # hacking has a similar rule:
     v230,v224: flake8-blind-except
     # isort uses customised rules in setup.cfg to behave like flake8-import-order
+    v230,v224: isort<4.3.0 ; sys_platform != 'win32' and python_version == '2.6'
     # https://github.com/timothycrosley/isort/issues/419
     v230,v224: flake8-isort<2 ; sys_platform != 'win32'
     # similar to flake8-future-import:
