tox.ini: Two more

--- a/tox.ini
+++ b/tox.ini
@@ -95,6 +95,8 @@ deps =
     v230,v224: flake8-blind-except
     # isort uses customised rules in setup.cfg to behave like flake8-import-order
     v230,v224: isort<4.3.0 ; sys_platform != 'win32' and python_version == '2.6'
+    v230,v224: isort<4.3.0 ; sys_platform != 'win32' and python_version == '3.3'
+    v230,v224: textfixtures<6.0.0 ; sys_platform != 'win32' and python_version == '2.6'
     # https://github.com/timothycrosley/isort/issues/419
     v230,v224: flake8-isort<2 ; sys_platform != 'win32'
     # similar to flake8-future-import:
