.travis.yml: Use VIRTUALENV_WHEEL=no

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ env:
   global:
     # Workaround for https://github.com/jayvdb/flake8-putty/issues/16
     - VIRTUALENV_DOWNLOAD=no
+    - VIRTUALENV_WHEEL=no
   matrix:
     - TOXENV=v26x,v255,v241,v230,v224,v220,v210,v200
     - TOXENV=green
@@ -40,8 +41,6 @@ matrix:
 
 install:
   - pip install -U -r test-requirements.txt
-  - mkdir ~/.virtualenv/
-  - cp virtualenv.ini ~/.virtualenv/virtualenv.ini
 
 script:
 - tox
