--- a/tox.ini
+++ b/tox.ini
@@ -56,7 +56,7 @@ deps =
     v250,v241: pep8-naming
     v250,v241: flake8-pep3101
     v250,v241: hacking
-    v250,v241: flake8-coding
+    v250,v241: flake8-coding<1.3
     v250,v241: flake8-tuple
     # https://github.com/aleGpereira/flake8-mock/issues/3
     v250,v241: flake8-mock ; sys_platform != 'win32' or python_version < '3'
