tox.ini: Set flake8-isort<2 for flake8 v2
flake8-isort 2.x is flake8 v3 only.

--- a/tox.ini
+++ b/tox.ini
@@ -70,8 +70,10 @@ deps =
     # as they are similar to one of the above plugins
     v230,v224: flake8-blind-except  # hacking has a similar rule
     # isort uses customised rules in setup.cfg to behave like flake8-import-order
-    # https://github.com/timothycrosley/isort/issues/419
-    v230,v224: flake8-isort ; sys_platform != 'win32'
+    # https://github.com/timothycrosley/isort/issues/419 fixed in 4.2.8
+    v230,v224: isort<4.3.0 ; sys_platform == 'win32' or python_version == '2.6' or python_version == '3.3'
+    v230,v224: testfixtures<6.0.0 ; python_version == '2.6'
+    v230,v224: flake8-isort<2
     v230,v224: flake8-future ; python_version > '2.6'  # similar to flake8-future-import
     v230,v224: git+https://github.com/jayvdb/flake8-future@py26 ; python_version < '2.7'
     # flake8-todo is a blunter implementation of hacking H101
