--- a/tox.ini
+++ b/tox.ini
@@ -71,7 +71,7 @@ deps =
     v230,v224: flake8-blind-except  # hacking has a similar rule
     # isort uses customised rules in setup.cfg to behave like flake8-import-order
     # https://github.com/timothycrosley/isort/issues/419
-    v230,v224: flake8-isort ; sys_platform != 'win32'
+    v230,v224: flake8-isort<2; sys_platform != 'win32'
     v230,v224: flake8-future ; python_version > '2.6'  # similar to flake8-future-import
     v230,v224: git+https://github.com/jayvdb/flake8-future@py26 ; python_version < '2.7'
     # flake8-todo is a blunter implementation of hacking H101
