--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ matrix:
       python: pypy3
 
 install:
-- pip install tox virtualenv==15.0.1
+- pip install tox
 
 script:
 - if [[ "$TRAVIS_PYTHON_VERSION" == "3.2" ]]; then pip install 'virtualenv<14' ; fi
