tox.ini: Use putty instead of isort config on win32
isort does not understand `/` paths in its config,
so use putty to ignore flake8-isort errors on win32.

--- a/tox.ini
+++ b/tox.ini
@@ -76,8 +76,7 @@ deps =
 
     # similar to flake8-tidy-imports/flake8-import-order:
     # isort uses customised rules in setup.cfg to behave like flake8-import-order
-    # https://github.com/timothycrosley/isort/issues/419
-    v230,v224: flake8-isort<2; sys_platform != 'win32'
+    v230,v224: flake8-isort<2
 
     # flake8-future is similar to flake8-future-import:
     v230,v224: flake8-future ; python_version > '2.6'
@@ -104,3 +103,5 @@ putty-ignore =
     /(__str__|__unicode__)/,/__repr__/ : +D105,N802
     tests/ : +D102,F481,FI11,I100,L103,T000
     tests/test_integration.py : +L102
+    # https://github.com/timothycrosley/isort/issues/737
+    tests/test_config.py,tests/test_integration.py, sys_platform == 'win32' : +I001
