--- a/tox.ini
+++ b/tox.ini
@@ -76,8 +76,8 @@ deps =
 
     # similar to flake8-tidy-imports/flake8-import-order:
     # isort uses customised rules in setup.cfg to behave like flake8-import-order
-    # https://github.com/timothycrosley/isort/issues/419 fixed in 4.2.8
-    v230,v224: isort==4.2.8 ; sys_platform == 'win32'
+    # https://github.com/timothycrosley/isort/issues/737 prevents config
+    # from working.  This isnt a critical problem, as putty can ignore the errors
     v230,v224: testfixtures<6.0.0 ; python_version == '2.6'
     v230,v224: flake8-isort<2
 
@@ -106,3 +106,4 @@ putty-ignore =
     /(__str__|__unicode__)/,/__repr__/ : +D105,N802
     tests/ : +D102,F481,FI11,I100,L103,T000
     tests/test_integration.py : +L102
+    tests/test_config.py,tests/test_integration.py, sys_platform == 'win32' : +I001
