--- a/tox.ini
+++ b/tox.ini
@@ -29,8 +29,9 @@ commands =
     test: python setup.py test {posargs}
 deps =
     test,green,pytest: mock ; python_version < '3.3'
+    green,pytest: coverage<5; python_version == '2.6' or python_version == '3.3'
+    green,pytest: coverage<4; python_version == '3.2'
     green: green
-    pytest: pytest-runner
     pytest: pytest-cov
     pytest: codecov
     v26x: flake8>=2.6.2,<2.7
