--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,7 @@ deps =
     test,green,pytest: mock ; python_version < '3.3'
     green,pytest: coverage<5; python_version == '2.6' or python_version == '3.3'
     green,pytest: coverage<4; python_version == '3.2'
+    green: backports.shutil_get_terminal_size>=1.0.0; python_version=="3.2"
     green: green
     pytest: pytest-cov
     pytest: codecov
